  JDOM object, rather than a file. This change allows the Curn RSS parser
  API to provide a JDOM view of the feed, as well as the ROME version.

- Removed spurious informa.jar from the distribution. Curn no longer bundles
  the Informa RSS parsing API; the jar was a leftover.

- Updated RSSChannel class to provide an enumerated value that indicates
  the type of the RSS feed.

---------------------------------------------------------------------------
Version 3.2.6 (23 April, 2010)

- Rolled in new version of org.clapper Java Utility library, which contains
  a fix for boolean configuration value parsing. This new library fixes bugs
  with Curn's handling of boolean configuration values, which were defaulting
  to "false" in cases where they should not have been.
- Changed license to a true BSD license.

---------------------------------------------------------------------------
Version 3.2.5 (26 February, 2010)

- Freemarker transformation code is a little more careful: It no longer
  invokes Freemarker on a template, if there are no feeds to display.

---------------------------------------------------------------------------
Version 3.2.4 (25 October, 2009)

- Fixed null pointer exception when RetainArticlesPlugIn refers to an item
  that has no URL.
- Fixed null pointer exception when saving the cache for an item that has
  no URL.
- Curn now supports a -e (--config-encoding) parameter, to specify the encoding
  of the configuration file. If not specified, the encoding defaults to the
  JVM's default encoding.

---------------------------------------------------------------------------
Version 3.2.3 (12 April, 2009)

				 ---------
				 Bug Fixes
				 ---------

- Added new PostFeedProcessPlugIn phase, and changed most existing plug-ins
  to use it. This reflects what's really happening: The plug-in is being
  invoked after the feed is parsed *and* after it's been processed.

- Left RetainArticlesPlugIn as a PostFeedParsePlugIn. This corrects a bug