@@ -14,29 +14,18 @@ body
 </head>
 
 <body>
-<p><i>curn</i> is an RSS reader. It scans a configured set of URLs, each
-one representing an RSS feed, and summarizes the results. By default,
-<i>curn</i> keeps track of individual items within each RSS feed, using an
-on-disk cache; when using the cache, it will suppress displaying
-information for items it has already processed.</p>
+<p><i>curn</i> is a powerful, customizable, open-source command-line RSS reader.</p>
 
-<p>Unlike many RSS readers, <i>curn</i> does not use a graphical user
-interface. It is a command-line utility, intended to be run periodically in
-the background by a command scheduler such as <i>cron</i>(8) (on Unix-like
-systems) or the Windows Scheduler Service (on Windows).</p>
-
-<p><i>curn</i> can read RSS feeds from any URL that's supported by Java's
-runtime. When querying HTTP sites, <i>curn</i> uses the HTTP
-<tt>If-Modified-Since</tt> and <tt>Last-Modified</tt> headers to suppress
-retrieving and processing feeds that haven't changed. By default, it also
-requests that the remote HTTP server gzip the XML before sending it. (Some
-HTTP servers honor the request; some don't.) These measures both minimize
-network bandwidth and ensure that <i>curn</i> is as kind as possible to the
-remote RSS servers.</p>
-
-<p>For more information, please visit the
+<p>For complete and detailed information, please visit the
 <a href="http://www.clapper.org/software/java/curn/"><i>curn</i> home page</a>.</p>
 
-<p><i>curn</i> is Copyright &copy; 2004-2010 Brian M. Clapper</p>
+<p><b>NOTE</b>: Portions of <i>curn</i> were developed with
+corporate funding from
+<a href="http://www.ardentex.com/">ArdenTex, Inc.</a> and
+<a href="http://www.dowjones.com/">Dow, Jones and Co.</a> Both companies
+have graciously donated the resulting software back to the <i>curn</i>
+open source project.</p>
+
+<p><i>curn</i> is Copyright &copy; 2004-2010 Brian M. Clapper. All rights reserved.</p>
 </body>
 </html>
